--- a/.github/workflows/cadena.yml
+++ b/.github/workflows/cadena.yml
@@ -9,11 +9,12 @@ jobs:
   preparacion_entorno:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      with:
-        node-version: '16.x'
-      - name: npm install
-        run: npm install
-      - name: lint
-        run: npm run eslint
+      - name: Saludar
+        run: |
+          echo "Hola Github Actions!!!"
+      - name: Date
+        run: |
+          echo $(date)
+      - name: List 
+        run: |
+          ls -l
