--- a/.github/workflows/cadena.yml
+++ b/.github/workflows/cadena.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+      with:
+        node-version: '16.x'
       - name: Saludar
         run: |
           echo "Hola Github Actions!!!"
